# ProgrammingSamples

./: .clang-format  .gitignore  CATALOGUE  Library  README.md
build_system/rake/: README.md  namespace_rakefile
c/bench/: time.c
c/interesting/: anonymous.c
c/libev/: Makefile
c/syntax/: README.md  bitint_256.c
c/tmp/: size.c
clojure/basic/: FAQ  basic.clj  fib.clj  is_blank.clj  java_interaction.clj  map.clj  record.clj  reduce.clj
clojure/seven-languages/: README.md  project.clj
coffee/basic/: hello.coffee
cpp/: .clang-format  .clang-tidy
cpp/codebase/: .clang-format  .ycm_extra_conf.py  CMakeLists.txt  Makefile  TODO  stop_watch.hh  stop_watch_test.cc  string_utils.hh  underlying_to_int.hh
cpp/codebase/archimedes/: CMakeLists.txt
cpp/codebase/archimedes/common/: CMakeLists.txt  defer_unittest.cc
cpp/codebase/archimedes/concurrent/: thread_group.hh  thread_group_sample.cc
cpp/codebase/archimedes/include/archimedes/common/: defer.hh
cpp/codebase/archimedes/include/common/: defer.hh
cpp/codebase/archimedes/include/concurrent/: countdown-latch.cc
cpp/codebase/archimedes/include/network/simple_tcp_wrapper/: tcp_client.hh
cpp/codebase/common/: CMakeLists.txt  defer.hh  defer_test.cc  defer_unittest.cc  initializer.hh  initializer_test.cc
cpp/codebase/concurrent/: countdown-latch.hh  thread_group.hh  thread_group_sample.cc
cpp/codebase/examples/: CMakeLists.txt  defer_test.cc  stop_watch.cc
cpp/codebase/include/concurrent/: TODO
cpp/codebase/include/network/simple_tcp_wrapper/: tcp_client.hh  tcp_server.hh  tcp_server_sample.cc
cpp/codebase/include/template_wrapper/: underlying_to_int.hh
cpp/codebase/log/: log.hh  log_test.cc
cpp/codebase/network/simple_tcp_wrapper/: TODO  tcp_server.hh  tcp_server_sample.cc
cpp/codebase/src/common/: defer_test.cc  initializer1.cc
cpp/codebase/src/log/: log.hh  log_test.cc
cpp/codebase/string/: string_utils.hh
cpp/codebase/template_wrapper/: underlying_to_int_test.cc
cpp/glog/: README  build  hello.cc
cpp/google-benchmark/: build
cpp/performance/: .ycm_extra_conf.py  CMakeLists.txt  README.md
cpp/performance/src/: CMakeLists.txt  atomic_bench.cc  polymorphism_bench.cc  visitor.cc  visitor_bench.cc  vtable.cc  vtable_bench.cc
cpp/protobuf/: build
cpp/spdlog/: spdlog_sample.cc
cpp/test/: README.md  bind.cc  bind_ref.cc  const.cc  fmt_stringview_v5.cc  forward_test_without_type.cc  from_chars.cc  function_mem_size.cc  move_forward.cc  move_test.cc  range_for_llvmcode.cc  range_for_llvmcode.ll  size.cc  static_cast_test.cc  string.cc  template_template.cc  test_iomanip.cc  thread_local.cc
crystal/basic/: channel.cr  mixin.cr
d/basic/: binary_search.d  class_ex.d  dict.d  find_int.d  foot.d  fun.d  hello.d  map.d  palindrome.d  random.d  ref_sample.d  rhello.d  string.d  type.d  ufcs.d
d/performance/: simple.d
elixir/basic/: ask.ex  basic_types.exs  combined.ex  drop.ex  example.exs  expression.exs  file.exs  function.exs  hello.exs  hello_module.ex  kv.ex  list.exs  message_transform.exs  module.exs  pascal.ex  print_triangle.exs  record.exs  string.exs  user.ex
elixir/practice/: wordcount.ex
go/buntdb/: buntdb_ex.go
go/snippet/: zap.go
go/termbox-go/: paint_circle.go
go/test/: interface.go  nil_channel.go  rtti.go  stack.go  structure_cons.go
graphviz/basic/: hello.dot
haskell/basic/: control-flow.hs  forever.hs  learn-haskell-zh.hs  learnhaskell.hs  map.hs  type.hs
haskell/inspect/: fold.hs
javascript/basic/: generator.js
julia/basic/: hello.jl  learnjulia.jl  tutorial.jl
make/basic/: assignment.mk  shell.mk
make/predefined/: DMakefile
performance/false_sharing/: false_sharing_test.go  run.sh
problems/awk-stdin/: README.md  test.awk  test.sh
python/basic/: hello_python3.py  list.py  number.py  run.py  run_decorator.py  string.py
r/basic/: README  hello.R
ruby/basic/: TODO  array.rb  iter.rb  proc.rb  range.rb
ruby/inspect/: TODO  class_scope.rb  inspect_class.rb
rust/basic/: hello_world.rs
sed/test/: qif.sed  qif.txt  t1.sed
shell/basic/: for.sh  while.sh
swift/basic/: hello.swift
systemtap/basic/: if_even_odd.stp
systemtap/project/: redis_stap.stp
tools/podman/: README.md  run_hello.sh
uml/: hello.uml
utils/: create_default_dir_structure  move_library.rb
(+373 files in other folders)
